Implementing channel and live stream alerts